<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Cài đặt khác">

        <SwitchPreferenceCompat
            app:key="night"
            app:icon="@drawable/ic_nights"
            app:title="Giao diện tối"
            />

        <Preference
            app:key="info"
            app:icon="@drawable/ic_info"
            app:summaryOff="@string/attachment_summary_off"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>